shared/src/test/data/yeast/invalid-json/invalid-number.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'datetime'
Indicator          13,  2, 11 '\"'
EndScalar          14,  2, 12 ''
Indicator          14,  2, 12 ':'
WhiteSpace         15,  2, 13 ' '
BeginScalar        16,  2, 14 ''
Error              16,  2, 14 '0041533193'
EndScalar          26,  2, 24 ''
Indicator          26,  2, 24 ','
LineBreak          27,  2, 25 '\n'
WhiteSpace         28,  3,  0 '  '
BeginScalar        30,  3,  2 ''
Indicator          30,  3,  2 '\"'
Text               31,  3,  3 'a'
Indicator          32,  3,  4 '\"'
EndScalar          33,  3,  5 ''
Indicator          33,  3,  5 ':'
WhiteSpace         34,  3,  6 ' '
BeginScalar        35,  3,  7 ''
Indicator          35,  3,  7 '\"'
Text               36,  3,  8 'b'
Indicator          37,  3,  9 '\"'
EndScalar          38,  3, 10 ''
LineBreak          38,  3, 10 '\n'
EndMapping         39,  4,  0 '}'
